[package]
name = "worker-pool"
version = "0.2.0"
edition = "2021"
authors = [ "Shad Amethyst <adrien.burgun@orange.fr>" ]
description = "A rust crate to handle a set of worker threads, which need to communicate back their result to the main thread"
repository = "https://github.com/adri326/worker-pool/"
license = "MIT OR Apache-2.0"
keywords = ["actors", "threadpool", "thread", "pool", "mpsc"]
categories = ["concurrency"]

[dependencies]
